--- a/website.template.html
+++ b/website.template.html
@@ -32,6 +32,8 @@
       .thumb {
         margin-top: 10px;
         margin-right: 20px;
+        -webkit-filter: drop-shadow(0px 0px 5px #aaa);
+        filter: drop-shadow(0px 0px 5px #aaa);
       }
     </style>
   </head>
