Website: Hide long urls

--- a/website.template.html
+++ b/website.template.html
@@ -25,6 +25,9 @@
         max-width: 1200px;
         margin: auto;
       }
+      .content p {
+        overflow: hidden;
+      }
       .video {
         margin-top: 50px;
         margin-bottom: 50px;
